Minor edits to epochs

--- a/Q2_folder/Q2.ipynb
+++ b/Q2_folder/Q2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ef4232ed-2c39-48de-bb6c-1127f9406f73",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:56:20.565029Z",
-     "iopub.status.busy": "2025-12-13T13:56:20.563805Z",
-     "iopub.status.idle": "2025-12-13T13:56:50.852754Z",
-     "shell.execute_reply": "2025-12-13T13:56:50.842259Z",
-     "shell.execute_reply.started": "2025-12-13T13:56:20.564948Z"
+     "iopub.execute_input": "2025-12-15T22:34:00.606969Z",
+     "iopub.status.busy": "2025-12-15T22:34:00.604890Z",
+     "iopub.status.idle": "2025-12-15T22:34:00.633444Z",
+     "shell.execute_reply": "2025-12-15T22:34:00.631087Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:00.606867Z"
     },
     "tags": []
    },
@@ -26,15 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "6bf6aa9d-b254-40ad-aa28-a622881559b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:56:50.860561Z",
-     "iopub.status.busy": "2025-12-13T13:56:50.856380Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.157532Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.151380Z",
-     "shell.execute_reply.started": "2025-12-13T13:56:50.860497Z"
+     "iopub.execute_input": "2025-12-15T22:34:00.841608Z",
+     "iopub.status.busy": "2025-12-15T22:34:00.840775Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.675750Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.672939Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:00.841547Z"
     },
     "tags": []
    },
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "fd0e6685-26a8-425e-8c27-0f1e7a38ee09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.248566Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.160594Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.439862Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.358492Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.248439Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.679641Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.679049Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.706780Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.704278Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.679584Z"
     },
     "tags": []
    },
@@ -85,15 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "b6b68a5b-87de-4264-9626-8a28a732f793",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.447594Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.446542Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.462388Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.459195Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.447519Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.709869Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.709236Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.722069Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.719916Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.709813Z"
     },
     "tags": []
    },
@@ -116,15 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "df46bafd-d447-4724-9d51-9c13915df2fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.465525Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.464962Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.556802Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.553050Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.465472Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.727612Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.726928Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.739536Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.737319Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.727555Z"
     },
     "tags": []
    },
@@ -146,15 +146,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "4d8d7adc-a3e7-4948-83a7-d1b1010e9f55",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.562770Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.560809Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.651357Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.648779Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.562709Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.741588Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.741047Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.753777Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.751746Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.741537Z"
     },
     "tags": []
    },
@@ -177,15 +177,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "4d2110d8-ecbf-409d-b040-9c5d22f85808",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.655499Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.654900Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.839109Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.757858Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.655444Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.756899Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.756294Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.771761Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.769643Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.756847Z"
     },
     "tags": []
    },
@@ -220,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "e52838e8-a9e0-470d-abdb-57914b434963",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.859800Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.856902Z",
-     "iopub.status.idle": "2025-12-13T13:57:05.947893Z",
-     "shell.execute_reply": "2025-12-13T13:57:05.946066Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.859734Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.774143Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.773532Z",
+     "iopub.status.idle": "2025-12-15T22:34:04.790357Z",
+     "shell.execute_reply": "2025-12-15T22:34:04.787966Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.774092Z"
     },
     "tags": []
    },
@@ -242,15 +242,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "e8c2edb6-1b51-4b04-bb7c-40241a3d02d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:05.949867Z",
-     "iopub.status.busy": "2025-12-13T13:57:05.949277Z",
-     "iopub.status.idle": "2025-12-13T14:00:08.856561Z",
-     "shell.execute_reply": "2025-12-13T14:00:08.849062Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:05.949815Z"
+     "iopub.execute_input": "2025-12-15T22:34:04.793097Z",
+     "iopub.status.busy": "2025-12-15T22:34:04.792484Z",
+     "iopub.status.idle": "2025-12-15T22:36:44.740135Z",
+     "shell.execute_reply": "2025-12-15T22:36:44.663380Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:04.793044Z"
     },
     "tags": []
    },
@@ -259,36 +259,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/25, Loss: 2.3055\n",
-      "Epoch 2/25, Loss: 2.2617\n",
-      "Epoch 3/25, Loss: 2.1271\n",
-      "Epoch 4/25, Loss: 1.8762\n",
-      "Epoch 5/25, Loss: 1.5123\n",
-      "Epoch 6/25, Loss: 1.2194\n",
-      "Epoch 7/25, Loss: 1.2062\n",
-      "Epoch 8/25, Loss: 1.3807\n",
-      "Epoch 9/25, Loss: 1.5756\n",
-      "Epoch 10/25, Loss: 1.0690\n",
-      "Epoch 11/25, Loss: 1.0043\n",
-      "Epoch 12/25, Loss: 1.0995\n",
-      "Epoch 13/25, Loss: 1.0486\n",
-      "Epoch 14/25, Loss: 0.9427\n",
-      "Epoch 15/25, Loss: 0.9238\n",
-      "Epoch 16/25, Loss: 0.9449\n",
-      "Epoch 17/25, Loss: 0.9386\n",
-      "Epoch 18/25, Loss: 0.9021\n",
-      "Epoch 19/25, Loss: 0.8574\n",
-      "Epoch 20/25, Loss: 0.8203\n",
-      "Epoch 21/25, Loss: 0.7980\n",
-      "Epoch 22/25, Loss: 0.7820\n",
-      "Epoch 23/25, Loss: 0.7587\n",
-      "Epoch 24/25, Loss: 0.7303\n",
-      "Epoch 25/25, Loss: 0.7210\n"
+      "Epoch 1/20, Loss: 2.3035\n",
+      "Epoch 2/20, Loss: 2.2268\n",
+      "Epoch 3/20, Loss: 2.0215\n",
+      "Epoch 4/20, Loss: 1.6679\n",
+      "Epoch 5/20, Loss: 1.3263\n",
+      "Epoch 6/20, Loss: 1.3322\n",
+      "Epoch 7/20, Loss: 1.2073\n",
+      "Epoch 8/20, Loss: 1.3639\n",
+      "Epoch 9/20, Loss: 1.3248\n",
+      "Epoch 10/20, Loss: 1.1077\n",
+      "Epoch 11/20, Loss: 1.1542\n",
+      "Epoch 12/20, Loss: 1.0317\n",
+      "Epoch 13/20, Loss: 0.9364\n",
+      "Epoch 14/20, Loss: 0.9423\n",
+      "Epoch 15/20, Loss: 0.9289\n",
+      "Epoch 16/20, Loss: 0.9104\n",
+      "Epoch 17/20, Loss: 0.8922\n",
+      "Epoch 18/20, Loss: 0.8639\n",
+      "Epoch 19/20, Loss: 0.8325\n",
+      "Epoch 20/20, Loss: 0.8155\n"
      ]
     }
    ],
    "source": [
-    "epochs =  25 \n",
+    "epochs =  20 \n",
     "\n",
     "for epoch in range(epochs):\n",
     "    optimizer.zero_grad()\n",
@@ -299,20 +294,20 @@
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    \n",
-    "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item():.4f}\")\n"
+    "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item():.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "id": "ff1e744a-7cc4-4aa5-84ff-dbe0a1739461",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T14:00:08.939314Z",
-     "iopub.status.busy": "2025-12-13T14:00:08.875172Z",
-     "iopub.status.idle": "2025-12-13T14:00:09.755991Z",
-     "shell.execute_reply": "2025-12-13T14:00:09.753539Z",
-     "shell.execute_reply.started": "2025-12-13T14:00:08.939249Z"
+     "iopub.execute_input": "2025-12-15T22:36:44.745201Z",
+     "iopub.status.busy": "2025-12-15T22:36:44.744096Z",
+     "iopub.status.idle": "2025-12-15T22:36:45.748761Z",
+     "shell.execute_reply": "2025-12-15T22:36:45.745092Z",
+     "shell.execute_reply.started": "2025-12-15T22:36:44.745125Z"
     },
     "tags": []
    },
@@ -321,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy: 0.7384999990463257\n"
+      "Validation accuracy: 0.7254999876022339\n"
      ]
     }
    ],
