--- a/Q3_folder/Q3.ipynb
+++ b/Q3_folder/Q3.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "id": "0786cb4b-fc0c-47e4-a9c7-fbba840649b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:32.565983Z",
-     "iopub.status.busy": "2025-12-13T13:32:32.565188Z",
-     "iopub.status.idle": "2025-12-13T13:32:32.577601Z",
-     "shell.execute_reply": "2025-12-13T13:32:32.575450Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:32.565930Z"
+     "iopub.execute_input": "2025-12-15T22:34:13.248317Z",
+     "iopub.status.busy": "2025-12-15T22:34:13.239154Z",
+     "iopub.status.idle": "2025-12-15T22:34:13.850460Z",
+     "shell.execute_reply": "2025-12-15T22:34:13.748888Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:13.248185Z"
     },
     "tags": []
    },
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "id": "99316387-d8bb-4057-ae97-7dac444969b0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:32.992171Z",
-     "iopub.status.busy": "2025-12-13T13:32:32.990922Z",
-     "iopub.status.idle": "2025-12-13T13:32:35.423479Z",
-     "shell.execute_reply": "2025-12-13T13:32:35.421564Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:32.992116Z"
+     "iopub.execute_input": "2025-12-15T22:34:13.940356Z",
+     "iopub.status.busy": "2025-12-15T22:34:13.939456Z",
+     "iopub.status.idle": "2025-12-15T22:34:32.854884Z",
+     "shell.execute_reply": "2025-12-15T22:34:32.853003Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:13.940298Z"
     },
     "tags": []
    },
@@ -62,15 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "id": "f1c2d15f-d41c-4ae8-96a2-1e1f5d9ce2cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:35.426781Z",
-     "iopub.status.busy": "2025-12-13T13:32:35.426221Z",
-     "iopub.status.idle": "2025-12-13T13:32:35.451039Z",
-     "shell.execute_reply": "2025-12-13T13:32:35.449262Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:35.426727Z"
+     "iopub.execute_input": "2025-12-15T22:34:32.857173Z",
+     "iopub.status.busy": "2025-12-15T22:34:32.856552Z",
+     "iopub.status.idle": "2025-12-15T22:34:32.941958Z",
+     "shell.execute_reply": "2025-12-15T22:34:32.939825Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:32.857119Z"
     },
     "tags": []
    },
@@ -86,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "id": "e20ce067-1715-4489-b740-f6b514bb60b3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:35.454904Z",
-     "iopub.status.busy": "2025-12-13T13:32:35.452271Z",
-     "iopub.status.idle": "2025-12-13T13:32:35.470013Z",
-     "shell.execute_reply": "2025-12-13T13:32:35.467764Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:35.454824Z"
+     "iopub.execute_input": "2025-12-15T22:34:32.946882Z",
+     "iopub.status.busy": "2025-12-15T22:34:32.945467Z",
+     "iopub.status.idle": "2025-12-15T22:34:32.957065Z",
+     "shell.execute_reply": "2025-12-15T22:34:32.954774Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:32.946831Z"
     },
     "tags": []
    },
@@ -117,15 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "id": "2a1fb308-cd80-46db-8dfc-5b1731ece05b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:35.475093Z",
-     "iopub.status.busy": "2025-12-13T13:32:35.474444Z",
-     "iopub.status.idle": "2025-12-13T13:32:35.490344Z",
-     "shell.execute_reply": "2025-12-13T13:32:35.488097Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:35.475027Z"
+     "iopub.execute_input": "2025-12-15T22:34:32.959426Z",
+     "iopub.status.busy": "2025-12-15T22:34:32.958788Z",
+     "iopub.status.idle": "2025-12-15T22:34:32.970296Z",
+     "shell.execute_reply": "2025-12-15T22:34:32.968176Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:32.959377Z"
     },
     "tags": []
    },
@@ -147,16 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "id": "d96848fc-74d8-4ba5-8322-4ca909196d2f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:32:35.493964Z",
-     "iopub.status.busy": "2025-12-13T13:32:35.492343Z",
-     "iopub.status.idle": "2025-12-13T13:32:35.510001Z",
-     "shell.execute_reply": "2025-12-13T13:32:35.506389Z",
-     "shell.execute_reply.started": "2025-12-13T13:32:35.493903Z"
-    }
+     "iopub.execute_input": "2025-12-15T22:34:32.972905Z",
+     "iopub.status.busy": "2025-12-15T22:34:32.972311Z",
+     "iopub.status.idle": "2025-12-15T22:34:33.152062Z",
+     "shell.execute_reply": "2025-12-15T22:34:33.145847Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:32.972853Z"
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -177,15 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 68,
    "id": "6ccee803-1ad5-4865-ae1a-c0326b06b865",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:55:35.543640Z",
-     "iopub.status.busy": "2025-12-13T13:55:35.543127Z",
-     "iopub.status.idle": "2025-12-13T13:55:35.662962Z",
-     "shell.execute_reply": "2025-12-13T13:55:35.659789Z",
-     "shell.execute_reply.started": "2025-12-13T13:55:35.543590Z"
+     "iopub.execute_input": "2025-12-15T22:34:33.155448Z",
+     "iopub.status.busy": "2025-12-15T22:34:33.154530Z",
+     "iopub.status.idle": "2025-12-15T22:34:33.348001Z",
+     "shell.execute_reply": "2025-12-15T22:34:33.345827Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:33.155373Z"
     },
     "tags": []
    },
@@ -215,20 +216,20 @@
     "        x = torch.flatten(x, 1)\n",
     "\n",
     "        x = self.activation(self.fc1(x))\n",
-    "        return self.fc2(x)\n"
+    "        return self.fc2(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "89b2c100-dc7c-445e-9df0-f478651be32b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T13:57:35.347066Z",
-     "iopub.status.busy": "2025-12-13T13:57:35.345454Z",
-     "iopub.status.idle": "2025-12-13T14:00:10.563503Z",
-     "shell.execute_reply": "2025-12-13T14:00:10.560628Z",
-     "shell.execute_reply.started": "2025-12-13T13:57:35.346993Z"
+     "iopub.execute_input": "2025-12-15T22:34:33.350235Z",
+     "iopub.status.busy": "2025-12-15T22:34:33.349708Z",
+     "iopub.status.idle": "2025-12-15T22:37:03.365338Z",
+     "shell.execute_reply": "2025-12-15T22:37:03.361869Z",
+     "shell.execute_reply.started": "2025-12-15T22:34:33.350182Z"
     },
     "tags": []
    },
@@ -237,26 +238,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 2.3056\n",
-      "Epoch 2/20, Loss: 2.2300\n",
-      "Epoch 3/20, Loss: 2.0225\n",
-      "Epoch 4/20, Loss: 1.6889\n",
-      "Epoch 5/20, Loss: 1.3427\n",
-      "Epoch 6/20, Loss: 1.2156\n",
-      "Epoch 7/20, Loss: 1.1162\n",
-      "Epoch 8/20, Loss: 1.0209\n",
-      "Epoch 9/20, Loss: 1.1724\n",
-      "Epoch 10/20, Loss: 0.9452\n",
-      "Epoch 11/20, Loss: 0.9797\n",
-      "Epoch 12/20, Loss: 0.9073\n",
-      "Epoch 13/20, Loss: 0.8363\n",
-      "Epoch 14/20, Loss: 0.8185\n",
-      "Epoch 15/20, Loss: 0.8149\n",
-      "Epoch 16/20, Loss: 0.7795\n",
-      "Epoch 17/20, Loss: 0.7288\n",
-      "Epoch 18/20, Loss: 0.7138\n",
-      "Epoch 19/20, Loss: 0.7195\n",
-      "Epoch 20/20, Loss: 0.7029\n"
+      "Epoch 1/20, Loss: 2.3067\n",
+      "Epoch 2/20, Loss: 2.2141\n",
+      "Epoch 3/20, Loss: 1.9962\n",
+      "Epoch 4/20, Loss: 1.7090\n",
+      "Epoch 5/20, Loss: 1.4336\n",
+      "Epoch 6/20, Loss: 1.3543\n",
+      "Epoch 7/20, Loss: 1.4294\n",
+      "Epoch 8/20, Loss: 1.3048\n",
+      "Epoch 9/20, Loss: 1.1379\n",
+      "Epoch 10/20, Loss: 1.0902\n",
+      "Epoch 11/20, Loss: 1.0354\n",
+      "Epoch 12/20, Loss: 0.9797\n",
+      "Epoch 13/20, Loss: 0.9585\n",
+      "Epoch 14/20, Loss: 0.9499\n",
+      "Epoch 15/20, Loss: 0.9014\n",
+      "Epoch 16/20, Loss: 0.8402\n",
+      "Epoch 17/20, Loss: 0.7931\n",
+      "Epoch 18/20, Loss: 0.7859\n",
+      "Epoch 19/20, Loss: 0.7739\n",
+      "Epoch 20/20, Loss: 0.7362\n"
      ]
     }
    ],
@@ -282,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "id": "aa955fa7-939a-42d2-a2a9-ef330381118d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-13T14:00:10.646115Z",
-     "iopub.status.busy": "2025-12-13T14:00:10.644872Z",
-     "iopub.status.idle": "2025-12-13T14:00:11.139107Z",
-     "shell.execute_reply": "2025-12-13T14:00:11.062068Z",
-     "shell.execute_reply.started": "2025-12-13T14:00:10.646033Z"
+     "iopub.execute_input": "2025-12-15T22:37:03.369030Z",
+     "iopub.status.busy": "2025-12-15T22:37:03.368090Z",
+     "iopub.status.idle": "2025-12-15T22:37:04.155193Z",
+     "shell.execute_reply": "2025-12-15T22:37:04.152837Z",
+     "shell.execute_reply.started": "2025-12-15T22:37:03.368914Z"
     },
     "tags": []
    },
@@ -299,7 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy: 0.7494999766349792\n"
+      "Validation accuracy: 0.7459999918937683\n"
      ]
     }
    ],
@@ -313,14 +314,6 @@
     "    \n",
     "print(\"Validation accuracy:\", accuracy)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f5be429-734d-42c9-86a7-d214ae88f7ab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
