Add Q3 activation function experiments (ReLU, LeakyReLU, Sigmoid)

--- a/Q3_folder/Q3_LeakyReLU.ipynb
+++ b/Q3_folder/Q3_LeakyReLU.ipynb
@@ -2,8 +2,309 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "c1e8a7f4-479b-4d1f-bc09-a72a53d54747",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:03.385290Z",
+     "iopub.status.busy": "2025-12-16T10:48:03.384247Z",
+     "iopub.status.idle": "2025-12-16T10:48:10.701908Z",
+     "shell.execute_reply": "2025-12-16T10:48:10.699281Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:03.385056Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from functions import get_data, data_split_train_val\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9ba7f3ac-b940-41ef-a08c-e4a1ca13a9e3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:10.705947Z",
+     "iopub.status.busy": "2025-12-16T10:48:10.705052Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.388476Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.386317Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:10.705889Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (8000, 784)\n",
+      "Val: (2000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Fashion-MNIST CSV (test set)\n",
+    "X, y = get_data(\"../data/fashion-mnist_test.csv\")\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = data_split_train_val(X, y)\n",
+    "\n",
+    "print(\"Train:\", X_train.shape)\n",
+    "print(\"Val:\", X_val.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e7ed654d-9145-44e3-bcc8-0d67305aab77",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:15.391415Z",
+     "iopub.status.busy": "2025-12-16T10:48:15.390844Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.403114Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.401033Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:15.391360Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# convert numpy arrays to PyTorch tensors\n",
+    "X_train_tensor = torch.from_numpy(X_train).float()\n",
+    "y_train_tensor = torch.from_numpy(y_train).long()\n",
+    "\n",
+    "X_val_tensor = torch.from_numpy(X_val).float()\n",
+    "y_val_tensor = torch.from_numpy(y_val).long()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "de6db233-b25d-4ffd-857e-b2ba13378425",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:15.408050Z",
+     "iopub.status.busy": "2025-12-16T10:48:15.407473Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.432219Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.430127Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:15.407998Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reshape:\n",
+      "X_train_tensor shape: torch.Size([8000, 784])\n",
+      "X_val_tensor shape: torch.Size([2000, 784])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Before reshape:\")\n",
+    "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor shape:\", X_val_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cc1e4446-c761-4809-aad8-c1c06c3c01d8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:15.434817Z",
+     "iopub.status.busy": "2025-12-16T10:48:15.433867Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.444224Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.442010Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:15.434758Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8000 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train = X_train_tensor.shape[0]\n",
+    "num_val = X_val_tensor.shape[0]\n",
+    "\n",
+    "print(num_train, num_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "644a2ea7-68dc-4eed-9b16-4b5364807f30",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:15.447061Z",
+     "iopub.status.busy": "2025-12-16T10:48:15.446373Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.459835Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.457786Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:15.447005Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_tensor reshape: torch.Size([8000, 1, 28, 28])\n",
+      "X_val_tensor reshape: torch.Size([2000, 1, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_tensor = X_train_tensor.reshape(num_train, 1, 28, 28)\n",
+    "X_val_tensor = X_val_tensor.reshape(num_val, 1, 28, 28)\n",
+    "print(\"X_train_tensor reshape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor reshape:\", X_val_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "dd332669-5efa-4a01-b1c6-10ac0f66adb5",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:48:15.462932Z",
+     "iopub.status.busy": "2025-12-16T10:48:15.462272Z",
+     "iopub.status.idle": "2025-12-16T10:48:15.478005Z",
+     "shell.execute_reply": "2025-12-16T10:48:15.475566Z",
+     "shell.execute_reply.started": "2025-12-16T10:48:15.462879Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class CNN_LeakyReLU(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.act = nn.LeakyReLU(0.01)\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(1, 8, 3)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(8, 16, 3)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(16*5*5, 128)\n",
+    "        self.fc2 = nn.Linear(128, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(self.act(self.conv1(x)))\n",
+    "        x = self.pool(self.act(self.conv2(x)))\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.act(self.fc1(x))\n",
+    "        return self.fc2(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7eb7b06d-eb52-4013-b2b6-fdf157b8f841",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T11:03:26.546006Z",
+     "iopub.status.busy": "2025-12-16T11:03:26.544804Z",
+     "iopub.status.idle": "2025-12-16T11:08:55.863341Z",
+     "shell.execute_reply": "2025-12-16T11:08:55.860725Z",
+     "shell.execute_reply.started": "2025-12-16T11:03:26.545923Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 2.3044\n",
+      "Epoch 2/20, Loss: 2.2714\n",
+      "Epoch 3/20, Loss: 2.1526\n",
+      "Epoch 4/20, Loss: 1.9300\n",
+      "Epoch 5/20, Loss: 1.6043\n",
+      "Epoch 6/20, Loss: 1.2853\n",
+      "Epoch 7/20, Loss: 1.2120\n",
+      "Epoch 8/20, Loss: 1.4322\n",
+      "Epoch 9/20, Loss: 1.4647\n",
+      "Epoch 10/20, Loss: 1.4049\n",
+      "Epoch 11/20, Loss: 1.1411\n",
+      "Epoch 12/20, Loss: 1.1985\n",
+      "Epoch 13/20, Loss: 1.1410\n",
+      "Epoch 14/20, Loss: 1.0357\n",
+      "Epoch 15/20, Loss: 0.9911\n",
+      "Epoch 16/20, Loss: 0.9996\n",
+      "Epoch 17/20, Loss: 1.0106\n",
+      "Epoch 18/20, Loss: 0.9918\n",
+      "Epoch 19/20, Loss: 0.9494\n",
+      "Epoch 20/20, Loss: 0.9062\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = CNN_LeakyReLU()   # create the model\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(data.parameters(), lr=0.01)\n",
+    "\n",
+    "epochs = 20\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    \n",
+    "    outputs = data(X_train_tensor)         \n",
+    "    loss = criterion(outputs, y_train_tensor)\n",
+    "    \n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    \n",
+    "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "247132d7-34a4-4c12-8095-cc8f73929dfe",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T11:08:55.943123Z",
+     "iopub.status.busy": "2025-12-16T11:08:55.941909Z",
+     "iopub.status.idle": "2025-12-16T11:08:56.940457Z",
+     "shell.execute_reply": "2025-12-16T11:08:56.857982Z",
+     "shell.execute_reply.started": "2025-12-16T11:08:55.943062Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 0.6990000009536743\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    outputs = data(X_val_tensor)\n",
+    "    predictions = torch.argmax(outputs, 1)\n",
+    "    correct = predictions == y_val_tensor\n",
+    "    correct_float = correct.float()\n",
+    "    accuracy = correct_float.mean().item()\n",
+    "    \n",
+    "print(\"Validation accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3066a5a2-e37f-413f-ae2f-94d00a3e116d",
    "metadata": {},
    "outputs": [],
    "source": []
