--- a/Q3_folder/Q3_Sigmoid.ipynb
+++ b/Q3_folder/Q3_Sigmoid.ipynb
@@ -2,8 +2,313 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "bdab4558-1cf2-4b51-8eda-11d57fc0fef9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:08.044944Z",
+     "iopub.status.busy": "2025-12-16T10:55:08.044058Z",
+     "iopub.status.idle": "2025-12-16T10:55:08.140632Z",
+     "shell.execute_reply": "2025-12-16T10:55:08.060449Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:08.044885Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from functions import get_data, data_split_train_val\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4ed30819-9ccd-49bb-aeaa-5247162f9543",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:08.342803Z",
+     "iopub.status.busy": "2025-12-16T10:55:08.341522Z",
+     "iopub.status.idle": "2025-12-16T10:55:37.540057Z",
+     "shell.execute_reply": "2025-12-16T10:55:37.461917Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:08.342720Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (8000, 784)\n",
+      "Val: (2000, 784)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load Fashion-MNIST CSV (test set)\n",
+    "X, y = get_data(\"../data/fashion-mnist_test.csv\")\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = data_split_train_val(X, y)\n",
+    "\n",
+    "print(\"Train:\", X_train.shape)\n",
+    "print(\"Val:\", X_val.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "da00cd34-3fd6-4e79-99d7-77ddd3be378b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:37.548087Z",
+     "iopub.status.busy": "2025-12-16T10:55:37.546645Z",
+     "iopub.status.idle": "2025-12-16T10:55:37.639315Z",
+     "shell.execute_reply": "2025-12-16T10:55:37.563808Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:37.548027Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# convert numpy arrays to PyTorch tensors\n",
+    "X_train_tensor = torch.from_numpy(X_train).float()\n",
+    "y_train_tensor = torch.from_numpy(y_train).long()\n",
+    "\n",
+    "X_val_tensor = torch.from_numpy(X_val).float()\n",
+    "y_val_tensor = torch.from_numpy(y_val).long()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f5d22a8d-84a6-4856-a4cc-6505498d9fd0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:37.643458Z",
+     "iopub.status.busy": "2025-12-16T10:55:37.642294Z",
+     "iopub.status.idle": "2025-12-16T10:55:37.662366Z",
+     "shell.execute_reply": "2025-12-16T10:55:37.653029Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:37.643402Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before reshape:\n",
+      "X_train_tensor shape: torch.Size([8000, 784])\n",
+      "X_val_tensor shape: torch.Size([2000, 784])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Before reshape:\")\n",
+    "print(\"X_train_tensor shape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor shape:\", X_val_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2e55d220-b589-4c80-8e96-9bb7936e9f00",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:37.748783Z",
+     "iopub.status.busy": "2025-12-16T10:55:37.746462Z",
+     "iopub.status.idle": "2025-12-16T10:55:37.764189Z",
+     "shell.execute_reply": "2025-12-16T10:55:37.762100Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:37.748701Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8000 2000\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_train = X_train_tensor.shape[0]\n",
+    "num_val = X_val_tensor.shape[0]\n",
+    "\n",
+    "print(num_train, num_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9bfc38f5-3fb6-45c7-b4b2-a15b3e9b7ad2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:37.843391Z",
+     "iopub.status.busy": "2025-12-16T10:55:37.841535Z",
+     "iopub.status.idle": "2025-12-16T10:55:37.957255Z",
+     "shell.execute_reply": "2025-12-16T10:55:37.955079Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:37.843339Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_tensor reshape: torch.Size([8000, 1, 28, 28])\n",
+      "X_val_tensor reshape: torch.Size([2000, 1, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_tensor = X_train_tensor.reshape(num_train, 1, 28, 28)\n",
+    "X_val_tensor = X_val_tensor.reshape(num_val, 1, 28, 28)\n",
+    "print(\"X_train_tensor reshape:\", X_train_tensor.shape)\n",
+    "print(\"X_val_tensor reshape:\", X_val_tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "0d7e7ac6-a62f-4f24-a09d-b3cc56ed32f5",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T10:55:37.959803Z",
+     "iopub.status.busy": "2025-12-16T10:55:37.959201Z",
+     "iopub.status.idle": "2025-12-16T10:55:38.051307Z",
+     "shell.execute_reply": "2025-12-16T10:55:38.049167Z",
+     "shell.execute_reply.started": "2025-12-16T10:55:37.959723Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class CNN_Sigmoid(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.act = nn.Sigmoid()\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(1, 8, 3)\n",
+    "        self.pool = nn.MaxPool2d(2, 2)\n",
+    "        self.conv2 = nn.Conv2d(8, 16, 3)\n",
+    "\n",
+    "        self.fc1 = nn.Linear(16 * 5 * 5, 128)\n",
+    "        self.fc2 = nn.Linear(128, 10)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(self.act(self.conv1(x)))\n",
+    "        x = self.pool(self.act(self.conv2(x)))\n",
+    "        x = torch.flatten(x, 1)\n",
+    "        x = self.act(self.fc1(x))\n",
+    "        return self.fc2(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fac4fe40-9508-45db-a288-d110bcea3f5f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T11:03:19.954604Z",
+     "iopub.status.busy": "2025-12-16T11:03:19.953618Z",
+     "iopub.status.idle": "2025-12-16T11:08:52.549528Z",
+     "shell.execute_reply": "2025-12-16T11:08:52.544752Z",
+     "shell.execute_reply.started": "2025-12-16T11:03:19.954529Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 2.3333\n",
+      "Epoch 2/20, Loss: 2.7167\n",
+      "Epoch 3/20, Loss: 2.4760\n",
+      "Epoch 4/20, Loss: 2.3552\n",
+      "Epoch 5/20, Loss: 2.3433\n",
+      "Epoch 6/20, Loss: 2.3432\n",
+      "Epoch 7/20, Loss: 2.3374\n",
+      "Epoch 8/20, Loss: 2.3291\n",
+      "Epoch 9/20, Loss: 2.3215\n",
+      "Epoch 10/20, Loss: 2.3159\n",
+      "Epoch 11/20, Loss: 2.3123\n",
+      "Epoch 12/20, Loss: 2.3098\n",
+      "Epoch 13/20, Loss: 2.3079\n",
+      "Epoch 14/20, Loss: 2.3063\n",
+      "Epoch 15/20, Loss: 2.3050\n",
+      "Epoch 16/20, Loss: 2.3040\n",
+      "Epoch 17/20, Loss: 2.3032\n",
+      "Epoch 18/20, Loss: 2.3026\n",
+      "Epoch 19/20, Loss: 2.3022\n",
+      "Epoch 20/20, Loss: 2.3018\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = CNN_Sigmoid()\n",
+    "epochs = 20\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(data.parameters(), lr=0.01)\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = data(X_train_tensor)\n",
+    "    loss = criterion(outputs, y_train_tensor)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "    print(f\"Epoch {epoch+1}/{epochs}, Loss: {loss.item():.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a6426625-c750-44e7-8f0f-c863774b59b9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-12-16T11:08:52.562596Z",
+     "iopub.status.busy": "2025-12-16T11:08:52.554438Z",
+     "iopub.status.idle": "2025-12-16T11:08:54.352239Z",
+     "shell.execute_reply": "2025-12-16T11:08:54.349746Z",
+     "shell.execute_reply.started": "2025-12-16T11:08:52.562525Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy: 0.09600000083446503\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    outputs = data(X_val_tensor)\n",
+    "    predictions = torch.argmax(outputs, 1)\n",
+    "    correct = predictions == y_val_tensor\n",
+    "    correct_float = correct.float()\n",
+    "    accuracy = correct_float.mean().item()\n",
+    "    \n",
+    "print(\"Validation accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5439fe04-eddc-4a55-891d-e67cdb3da4d1",
    "metadata": {},
    "outputs": [],
    "source": []
