Update ReLU and Leaky ReLU

--- a/Q3_folder/Q3_LeakyReLU.ipynb
+++ b/Q3_folder/Q3_LeakyReLU.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Q3: Effect of Activation Functions on CNN Performance  \n",
-    "## Experiment: Sigmoid Activation\n",
+    "## Experiment: LeakyReLU Activation\n",
     "\n",
     "This notebook investigates how the **LeakyReLU activation function** affects the\n",
     "performance of a convolutional neural network on the Fashion-MNIST dataset.\n",
